# dlmg2OR

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  check_save.cc  cmake_install.cmake  doc.rst  plugin.cc  rhfdlmg2b.cc
backups/04_02/: plugin.cc  rhfdlmg2b.cc  rhfdlmg2b.h
backups/bad_example/: plugin.cc  pymodule.py  rhfdlmg2b.cc  rhfdlmg2b.h
backups/before_destroy/: plugin.cc  pymodule.py  rhfdlmg2b.cc
original/: CMakeLists.txt  __init__.py  plugin.cc  pymodule.py
